# Quintal

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  NEXT.md  RECOLLECT.md  ROADMAP.md  STATUS.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: blocklist.json  delisted.json  descriptions.json  enrichment_cache.json  geo.json  listings.jsonl  sample_listings.jsonl
scripts/: publish.sh
src/quintal/: __init__.py  config.py  dedup.py  descriptions.py  enrich.py  errors.py  geo.py  liveness.py  logconf.py  normalize.py  photo_hash.py  photos.py  pipeline.py  preferences.py  render_html.py  schema.py  score.py  screening.py  seed_prefs.py  valuation.py
src/quintal/collect/: __init__.py  base.py  extract.js  idealista.py  imovirtual.py  parsing.py  receiver.py  run.py  store.py
templates/: listings.html.j2
tests/: test_collect.py  test_dedup.py  test_descriptions.py  test_enrich.py  test_liveness.py  test_normalize.py  test_photos.py  test_preferences.py  test_score.py  test_screening.py  test_valuation.py
